BUG: Do not use ${itk-module}.
This causes build system errors.  Explicit names also improves readability.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,7 @@
+set(ExternalTemplate_SRCS
+  itkSomeFile.cxx
+  )
 
-
-#${itk-module} will be the name of this module and will not need to be
-#changed when this module is renamed.
-
-set(${itk-module}_SRC
-itkSomeFile.cxx
-)
-
-add_library(${itk-module} ${${itk-module}_SRC})
-target_link_libraries(${itk-module}  ${${itk-module}_LIBRARIES})
-itk_module_target(${itk-module})
+add_library(ExternalTemplate ${ExternalTemplate_SRCS})
+itk_module_link_dependencies()
+itk_module_target(ExternalTemplate)
