ENH: Build the module outside the ITK source tree.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ set(ExternalTemplateTests
   itkEmptyTest.cxx
   )
 
-CreateTestDriver(ExternalTemplateTests  "${ExternalTemplate-Test_LIBRARIES}" "${ExternalTemplateTests}")
+CreateTestDriver(ExternalTemplate "${ExternalTemplate-Test_LIBRARIES}" "${ExternalTemplateTests}")
 
 itk_add_test(NAME itkDeleteMeEmptyTest
-  COMMAND ExternalTemplateTestDriver itkEmptyTest "argument1" "..." )
+  COMMAND ExternalTemplateTestDriver itkEmptyTest "argument1" "...")
