--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,12 @@
 project(ExternalTemplate)
+cmake_minimum_required(VERSION 2.8.9)
+
 set(ExternalTemplate_LIBRARIES ExternalTemplate)
-itk_module_impl()
+
+if(NOT ITK_SOURCE_DIR)
+  find_package(ITK REQUIRED)
+  list(APPEND CMAKE_MODULE_PATH ${ITK_CMAKE_DIR})
+  include(ITKModuleExternal)
+else()
+  itk_module_impl()
+endif()
