ENH: Add itkLogNormalDistributionImageSourceTest.cxx.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,15 @@ itk_module_test()
 
 set(ModuleTemplateTests
   itkEmptyTest.cxx
+  itkLogNormalDistributionImageSourceTest.cxx
   )
 
 CreateTestDriver(ModuleTemplate "${ModuleTemplate-Test_LIBRARIES}" "${ModuleTemplateTests}")
 
 itk_add_test(NAME itkDeleteMeEmptyTest
   COMMAND ModuleTemplateTestDriver itkEmptyTest "argument1" "...")
+
+itk_add_test(NAME itkLogNormalDistributionImageSourceTest
+  COMMAND ModuleTemplateTestDriver itkLogNormalDistributionImageSourceTest
+    ${ITK_TEST_OUTPUT_DIR}/itkLogNormalDistributionImageSourceTestOutput.mha
+    )
