ENH: Add MinimalStandardRandomVariateGenerator class.
A class to to the generation of a library with.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ itk_module_test()
 
 set(ModuleTemplateTests
   itkEmptyTest.cxx
+  itkMinimalStandardRandomVariateGeneratorTest.cxx
   itkLogNormalDistributionImageSourceTest.cxx
   )
 
@@ -9,6 +10,10 @@ CreateTestDriver(ModuleTemplate "${ModuleTemplate-Test_LIBRARIES}" "${ModuleTemp
 
 itk_add_test(NAME itkDeleteMeEmptyTest
   COMMAND ModuleTemplateTestDriver itkEmptyTest "argument1" "...")
+
+itk_add_test(NAME itkMinimalStandardRandomVariateGeneratorTest
+  COMMAND ModuleTemplateTestDriver itkMinimalStandardRandomVariateGeneratorTest
+  )
 
 itk_add_test(NAME itkLogNormalDistributionImageSourceTest
   COMMAND ModuleTemplateTestDriver --without-threads
