--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ language: cpp
 env:
   global:
   - ExternalData_OBJECT_STORES="${HOME}/.ExternalData"
-  - ITK_REPOSITORY="https://ITK.org/ITK.git"
-  - ITK_REPOSITORY_CACHE="${ExternalData_OBJECT_STORES}/ITK.git"
+  - PROJ_SRC="${TRAVIS_BUILD_DIR}"
+  - ITK_REPOSITORY_REMOTE="https://ITK.org/ITK.git"
+  - ITK_REPOSITORY="${ExternalData_OBJECT_STORES}/ITK.git"
   - ITK_MODULE_NAME=ExternalTemplate
   - ITK_TAG=master
-  - PROJ_SRC="${TRAVIS_BUILD_DIR}"
-  - CMAKE_DOWNLOAD_FILE: cmake-3.6.0-Linux-x86_64.sh
-  - CTEST_OUTPUT_ON_FAILURE:1
+  - ITK_SRC="${HOME}/ITK"
 
 cache:
   directories:
@@ -23,8 +22,6 @@ matrix:
       sudo: required
     - os: osx
       osx_image: xcode7.3
-    - os: osx
-      osx_image: xcode6.4
 
 
 before_install:
@@ -34,12 +31,9 @@ before_install:
 before_script:
    - cmake --version
    - env
-   - ( cd ${ExternalData_OBJECT_STORES} && if [[ ! -e ${ITK_REPOSITORY_CACHE} ]]; then git clone --bare ${ITK_REPOSITORY}; fi && cd ${ITK_REPOSITORY_CACHE} && git fetch origin )
-   - cd ${PROJ_SRC} && git clone ${ITK_REPOSITORY_CACHE} -b "${ITK_TAG}" && ( cd ITK/Modules/Remote && ln -s ${PROJ_SRC} ${ITK_MODULE_NAME} )
-   - mkdir -p bld
+   - ( cd ${ExternalData_OBJECT_STORES} && if [[ ! -e ${ITK_REPOSITORY} ]]; then git clone --bare ${ITK_REPOSITORY_REMOTE}; fi && cd ${ITK_REPOSITORY} && git fetch origin )
+   - git clone --single-branch ${ITK_REPOSITORY} -b "${ITK_TAG}" "${ITK_SRC}" && ( cd ${ITK_SRC}/Modules/Remote && ln -s ${PROJ_SRC} ${ITK_MODULE_NAME} )
+   - ( cd ${PROJ_SRC}/test && git clone --single-branch ${ITK_REPOSITORY} -b dashboard dashboard)
 
 script:
-   - cd bld
-   - cmake -D "Module_${ITK_MODULE_NAME}:BOOL=ON" -D  BUILD_TESTING:BOOL=ON "${PROJ_SRC}/ITK"
-   - make -j 2 KWStyle "${ITK_MODULE_NAME}-all"
-   - ctest -L "${ITK_MODULE_NAME}"
+   - ctest -V -S ${PROJ_SRC}/test/ci/dashboard.cmake
