Use a git mirror for cached ITK repository

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
 before_script:
    - cmake --version
    - env
-   - ( cd ${ExternalData_OBJECT_STORES} && if [[ ! -e ${ITK_REPOSITORY} ]]; then git clone --bare ${ITK_REPOSITORY_REMOTE}; fi && cd ${ITK_REPOSITORY} && git fetch origin )
+   - ( cd ${ExternalData_OBJECT_STORES} && if [[ ! -e ${ITK_REPOSITORY} ]]; then git clone --mirror ${ITK_REPOSITORY_REMOTE}; fi && cd ${ITK_REPOSITORY} && git remote update )
    - git clone --single-branch ${ITK_REPOSITORY} -b "${ITK_TAG}" "${ITK_SRC}" && ( cd ${ITK_SRC}/Modules/Remote && ln -s ${PROJ_SRC} ${ITK_MODULE_NAME} )
    - ( cd ${PROJ_SRC}/test && git clone --single-branch ${ITK_REPOSITORY} -b dashboard dashboard)
 
