--- a/{{cookiecutter.project_name}}/test/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/test/CMakeLists.txt
@@ -1,18 +1,18 @@
 itk_module_test()
 
-set(ModuleTemplateTests
+set({{ cookiecutter.module_name }}Tests
   itkMinimalStandardRandomVariateGeneratorTest.cxx
   itkNormalDistributionImageSourceTest.cxx
   )
 
-CreateTestDriver(ModuleTemplate "${ModuleTemplate-Test_LIBRARIES}" "${ModuleTemplateTests}")
+CreateTestDriver({{ cookiecutter.module_name }} "${{ '{' }}{{ cookiecutter.module_name -}}_LIBRARIES}" "${{ '{' }}{{ cookiecutter.module_name }}Tests}")
 
 itk_add_test(NAME itkMinimalStandardRandomVariateGeneratorTest
-  COMMAND ModuleTemplateTestDriver itkMinimalStandardRandomVariateGeneratorTest
+  COMMAND {{ cookiecutter.module_name }}TestDriver itkMinimalStandardRandomVariateGeneratorTest
   )
 
 itk_add_test(NAME itkNormalDistributionImageSourceTest
-  COMMAND ModuleTemplateTestDriver --without-threads
+  COMMAND {{ cookiecutter.module_name }}TestDriver --without-threads
   --compare
     ${ITK_TEST_OUTPUT_DIR}/itkNormalDistributionImageSourceTestOutput.mha
     DATA{Baseline/itkNormalDistributionImageSourceTestOutput.mha}
