ENH: Cache the Homebrew packages
For faster brew install's

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 - gcc
 cache:
   directories:
-  - "$HOME/deps"
+    - "$HOME/Library/Caches/Homebrew"
 script:
 - python -m pip install cookiecutter
 - cookiecutter --no-input .
