ENH: Add a very simple template filter
The new template example can be modified easily by a developer to start
developing a new filter:
* The user will start with a skeleton of a filter with files and classes
already named appropriatly.
* A test is already implemented and can easily be modified.
* A wrapper is automatically created

--- a/{{cookiecutter.project_name}}/test/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/test/CMakeLists.txt
@@ -3,12 +3,22 @@ itk_module_test()
 set({{ cookiecutter.module_name }}Tests
   itkMinimalStandardRandomVariateGeneratorTest.cxx
   itkNormalDistributionImageSourceTest.cxx
+  itk{{ cookiecutter.filter_name }}Test.cxx
   )
 
 CreateTestDriver({{ cookiecutter.module_name }} "${{ '{' }}{{ cookiecutter.module_name -}}-Test_LIBRARIES}" "${{ '{' }}{{ cookiecutter.module_name }}Tests}")
 
 itk_add_test(NAME itkMinimalStandardRandomVariateGeneratorTest
   COMMAND {{ cookiecutter.module_name }}TestDriver itkMinimalStandardRandomVariateGeneratorTest
+  )
+
+itk_add_test(NAME itk{{ cookiecutter.filter_name }}Test
+  COMMAND {{ cookiecutter.module_name }}TestDriver
+    --compare
+    ${ITK_TEST_OUTPUT_DIR}/itk{{ cookiecutter.filter_name }}TestOutput.mha
+    DATA{Baseline/itk{{ cookiecutter.filter_name }}TestOutput.mha}
+  itk{{ cookiecutter.filter_name }}Test
+    ${ITK_TEST_OUTPUT_DIR}/itk{{ cookiecutter.filter_name }}TestOutput.mha
   )
 
 itk_add_test(NAME itkNormalDistributionImageSourceTest
