--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
 variables:
-  ITKGitTag: v5.0rc01
-  CMakeBuildType: MinSizeRel
+  ITKGitTag: v5.0.0
+  ITKPythonPost: '.post1'
+  CMakeBuildType: Release
 
 trigger:
   batch: true
@@ -173,6 +174,7 @@ jobs:
 
   - script: |
       cd $(Agent.BuildDirectory)/ITKModuleTemplate
+      export ITK_PACKAGE_VERSION=$(ITKGitTag)$(ITKPythonPost)
       export ITK_PACKAGE_VERSION=$(ITKGitTag)
       $(Build.SourcesDirectory)/dockcross-manylinux-download-cache-and-build-module-wheels.sh
     displayName: 'Build Python packages'
@@ -188,7 +190,7 @@ jobs:
   timeoutInMinutes: 0
   cancelTimeoutInMinutes: 300
   pool:
-    vmImage: 'macos-10.13'
+    vmImage: 'macos-10.14'
 
   steps:
   - script: |
@@ -203,7 +205,7 @@ jobs:
 
   - script: |
       cd $(Agent.BuildDirectory)/ITKModuleTemplate
-      export ITK_PACKAGE_VERSION=$(ITKGitTag)
+      export ITK_PACKAGE_VERSION=$(ITKGitTag)$(ITKPythonPost)
       $(Build.SourcesDirectory)/macpython-download-cache-and-build-module-wheels.sh
     displayName: 'Build Python packages'
 
@@ -233,7 +235,7 @@ jobs:
   - script: |
       call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
       cd $(Agent.BuildDirectory)\ITKModuleTemplate
-      set ITK_PACKAGE_VERSION=$(ITKGitTag)
+      set ITK_PACKAGE_VERSION=$(ITKGitTag)$(ITKPythonPost)
       set CC=cl.exe
       set CXX=cl.exe
       powershell.exe -file $(Build.SourcesDirectory)\windows-download-cache-and-build-module-wheels.ps1
