--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 variables:
-  ITKGitTag: v5.0.0
-  ITKPythonGitTag: v5.0.0.post1
+  ITKGitTag: v5.0.1
+  ITKPythonGitTag: v5.0.1
   CMakeBuildType: Release
 
 trigger:
