ENH: Update azure module for ITK 5.1rc2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
-# The file template originates from: https://github.com/InsightSoftwareConsortium/ITKModuleTemplate
+# The file template originates from the instructions: https://github.com/InsightSoftwareConsortium/ITKModuleTemplate/README.md
 variables:
-  ITKGitTag: v5.1rc02
-  ITKPythonGitTag: v5.1rc02
+  ITKGitTag: v5.1rc02       #Used for choosing branch of ITK to checkout
+  ITKPythonGitTag: v5.1rc02 #Used to identify the release name for the cached python build environmeent ITKPythonBuilds-linux.tar.zst
   CMakeBuildType: Release
 
 trigger:
@@ -19,21 +19,36 @@ jobs:
 
   strategy:
     matrix:
-      Linux:
-        imageName: 'ubuntu-16.04'
-        cCompiler: gcc
-        cxxCompiler: g++
-        compilerInitialization: ''
-      macOS:
-        imageName: 'macos-10.13'
-        cCompiler: clang
-        cxxCompiler: clang++
-        compilerInitialization: ''
-      Windows:
-        imageName: 'vs2017-win2016'
-        cCompiler: cl.exe
-        cxxCompiler: cl.exe
-        compilerInitialization: 'call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"'
+#     Linux1604:
+#       imageName: 'ubuntu-16.04'
+#       cCompiler: gcc
+#       cxxCompiler: g++
+#       compilerInitialization: ''
+     Linux1804:
+       imageName: 'ubuntu-18.04'
+       cCompiler: gcc
+       cxxCompiler: g++
+       compilerInitialization: ''
+     macOS1015:
+       imageName: 'macos-10.15'
+       cCompiler: clang
+       cxxCompiler: clang++
+       compilerInitialization: ''
+#     macOS1014:
+#       imageName: 'macos-10.14'
+#       cCompiler: clang
+#       cxxCompiler: clang++
+#       compilerInitialization: ''
+#     Windows2017:
+#       imageName: 'vs2017-win2016'
+#       cCompiler: cl.exe
+#       cxxCompiler: cl.exe
+#       compilerInitialization: 'call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"'
+     Windows2019:
+       imageName: 'windows-2019'
+       cCompiler: cl.exe
+       cxxCompiler: cl.exe
+       compilerInitialization: 'call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"'
 
   pool:
     vmImage: $(imageName)
@@ -60,7 +75,10 @@ jobs:
     displayName: 'Install build dependencies'
 
   - script: |
+      #git clone https://github.com/InsightSoftwareConsortium/ITK.git
       git clone --depth 5 --branch $(ITKGitTag) https://github.com/InsightSoftwareConsortium/ITK.git
+      cd ITK
+      git checkout $(ITKGitTag)
     workingDirectory: $(Agent.BuildDirectory)
     displayName: 'Download ITK'
 
@@ -86,7 +104,7 @@ jobs:
       cat > dashboard.cmake << EOF
       set(CTEST_SITE "Azure.\$ENV{AGENT_MACHINENAME}")
       file(TO_CMAKE_PATH "\$ENV{AGENT_BUILDDIRECTORY}" CTEST_DASHBOARD_ROOT)
-      file(TO_CMAKE_PATH "\$ENV{AGENT_BUILDDIRECTORY}/ITKModuleTemplate" CTEST_SOURCE_DIRECTORY)
+      file(TO_CMAKE_PATH "\$ENV{BUILD_SOURCESDIRECTORY}" CTEST_SOURCE_DIRECTORY)
       file(TO_CMAKE_PATH "\$ENV{AGENT_BUILDDIRECTORY}/build" CTEST_BINARY_DIRECTORY)
       set(dashboard_source_name "$(Build.Repository.Name)")
       if(DEFINED ENV{SYSTEM_PULLREQUEST_SOURCEBRANCH})
@@ -138,7 +156,7 @@ jobs:
       sudo pip3 install --upgrade pip
       sudo pip3 install --upgrade setuptools
       sudo pip3 install scikit-ci-addons
-      ci_addons ctest_junit_formatter "$(Agent.BuildDirectory)/build" > "$(Agent.BuildDirectory)/JUnitTestResults.xml"
+      ci_addons ctest_junit_formatter $(Agent.BuildDirectory)/build > $(Agent.BuildDirectory)/JUnitTestResults.xml
     condition: succeededOrFailed()
     displayName: 'Format CTest output in JUnit format'
 
@@ -150,98 +168,95 @@ jobs:
     displayName: 'Publish test results'
 
 
-- job: 'PackageLinux'
-  timeoutInMinutes: 0
-  cancelTimeoutInMinutes: 300
-  displayName: "Build Linux Python packages"
-  pool:
-    vmImage: 'Ubuntu-16.04'
-
-  steps:
-  - script: |
-      curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/dockcross-manylinux-download-cache-and-build-module-wheels.sh -O
-      chmod u+x dockcross-manylinux-download-cache-and-build-module-wheels.sh
-    displayName: 'Fetch build script'
-
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.7'
-      architecture: 'x64'
-
-  - script: |
-      python -m pip install cookiecutter
-      python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
-    displayName: 'Evaluate template'
-
-  - script: |
-      cd $(Agent.BuildDirectory)/ITKModuleTemplate
-      export ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
-      $(Build.SourcesDirectory)/dockcross-manylinux-download-cache-and-build-module-wheels.sh
-    displayName: 'Build Python packages'
-
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'LinuxWheels'
-      targetPath: '$(Agent.BuildDirectory)/ITKModuleTemplate/dist'
-
-
-- job: 'PackageMacOS'
-  displayName: "Build macOS Python packages"
-  timeoutInMinutes: 0
-  cancelTimeoutInMinutes: 300
-  pool:
-    vmImage: 'macos-10.14'
-
-  steps:
-  - script: |
-      curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/macpython-download-cache-and-build-module-wheels.sh -O
-      chmod u+x macpython-download-cache-and-build-module-wheels.sh
-    displayName: 'Fetch build script'
-
-  - script: |
-      python -m pip install cookiecutter
-      python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
-    displayName: 'Evaluate template'
-
-  - script: |
-      cd $(Agent.BuildDirectory)/ITKModuleTemplate
-      export ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
-      $(Build.SourcesDirectory)/macpython-download-cache-and-build-module-wheels.sh
-    displayName: 'Build Python packages'
-
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'MacOSWheels'
-      targetPath: '$(Agent.BuildDirectory)/ITKModuleTemplate/dist'
-
-
-- job: 'PackageWindows'
-  displayName: "Build Windows Python packages"
-  timeoutInMinutes: 0
-  cancelTimeoutInMinutes: 300
-  pool:
-    vmImage: 'vs2017-win2016'
-
-  steps:
-  - script: |
-      curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/windows-download-cache-and-build-module-wheels.ps1 -O
-    displayName: 'Fetch build script'
-
-  - script: |
-      python -m pip install cookiecutter
-      python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
-    displayName: 'Evaluate template'
-
-  - script: |
-      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-      cd $(Agent.BuildDirectory)\ITKModuleTemplate
-      set ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
-      set CC=cl.exe
-      set CXX=cl.exe
-      powershell.exe -file $(Build.SourcesDirectory)\windows-download-cache-and-build-module-wheels.ps1
-    displayName: 'Build Python packages'
-
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'WindowsWheels'
-      targetPath: '$(Agent.BuildDirectory)/ITKModuleTemplate/dist'
+  - job: 'PackageLinux'
+    timeoutInMinutes: 0
+    cancelTimeoutInMinutes: 300
+    displayName: "Build Linux Python packages"
+    pool:
+      vmImage: 'Ubuntu-16.04'
+  
+    steps:
+    - script: |
+        curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/dockcross-manylinux-download-cache-and-build-module-wheels.sh -O
+        chmod u+x dockcross-manylinux-download-cache-and-build-module-wheels.sh
+      displayName: 'Fetch build script'
+  
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.7'
+        architecture: 'x64'
+  
+    - script: |
+        python -m pip install cookiecutter
+        python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
+      displayName: 'Evaluate template'
+  
+    - script: |
+        export ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
+        ./dockcross-manylinux-download-cache-and-build-module-wheels.sh
+      displayName: 'Build Python packages'
+  
+    - task: PublishPipelineArtifact@0
+      inputs:
+        artifactName: 'LinuxWheels'
+        targetPath: './dist'
+  
+  
+  - job: 'PackageMacOS'
+    displayName: "Build macOS Python packages"
+    timeoutInMinutes: 0
+    cancelTimeoutInMinutes: 300
+    pool:
+      vmImage: 'macos-10.14'
+  
+    steps:
+    - script: |
+        curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/macpython-download-cache-and-build-module-wheels.sh -O
+        chmod u+x macpython-download-cache-and-build-module-wheels.sh
+      displayName: 'Fetch build script'
+  
+    - script: |
+        python -m pip install cookiecutter
+        python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
+      displayName: 'Evaluate template'
+  
+    - script: |
+        export ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
+        ./macpython-download-cache-and-build-module-wheels.sh
+      displayName: 'Build Python packages'
+  
+    - task: PublishPipelineArtifact@0
+      inputs:
+        artifactName: 'MacOSWheels'
+        targetPath: './dist'
+  
+  
+  - job: 'PackageWindows'
+    displayName: "Build Windows Python packages"
+    timeoutInMinutes: 0
+    cancelTimeoutInMinutes: 300
+    pool:
+      vmImage: 'vs2017-win2016'
+  
+    steps:
+    - script: |
+        curl -L https://raw.githubusercontent.com/InsightSoftwareConsortium/ITKPythonPackage/master/scripts/windows-download-cache-and-build-module-wheels.ps1 -O
+      displayName: 'Fetch build script'
+  
+    - script: |
+        python -m pip install cookiecutter
+        python -m cookiecutter --no-input --output-dir $(Agent.BuildDirectory) $(Build.SourcesDirectory)
+      displayName: 'Evaluate template'
+  
+    - script: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        set ITK_PACKAGE_VERSION=$(ITKPythonGitTag)
+        set CC=cl.exe
+        set CXX=cl.exe
+        powershell.exe -file .\windows-download-cache-and-build-module-wheels.ps1
+      displayName: 'Build Python packages'
+  
+    - task: PublishPipelineArtifact@0
+      inputs:
+        artifactName: 'WindowsWheels'
+        targetPath: './dist'
